tdf#104315: Revert "tdf#44282 fix missing space...

... for numbered lists in TOC"

This commit is causing lot of regressions in TOC.
Besides, as the comment says, it's an ugly hack,
so I'd prefer to revert it and find a better solution

This reverts commit 250252d02bac88877845a4bc27e3f1837f1312ba.

Change-Id: I9f57d1cb0f7237372030c12651ba92fbe5a60945
Reviewed-on: https://gerrit.libreoffice.org/34293
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit dc8ebf205c3231ffc4d6737b53cee396c2ac0bfd)